tests/miniJava/neg/000298_mutation.MiniJava
class java { public static void Main ( else [ ] java ) { { } } }
